--- a/guestbook/guestbook-ui-deployment-3.yaml
+++ b/guestbook/guestbook-ui-deployment-3.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: guestbook-ui-3
   annotations:
-  argocd.argoproj.io/sync-wave: "1"
+  argocd.argoproj.io/sync-wave: "2"
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: guestbook-ui
+      app: guestbook-ui-3
   template:
     metadata:
       labels:
-        app: guestbook-ui
+        app: guestbook-ui-3
     spec:
       initContainers:
         - name: wait-for-content-management-server
