--- a/helm-guestbook2/templates/deployment2.yaml
+++ b/helm-guestbook2/templates/deployment2.yaml
@@ -36,6 +36,7 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 15
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
