--- a/helm-guestbook2/templates/deployment.yaml
+++ b/helm-guestbook2/templates/deployment.yaml
@@ -20,6 +20,10 @@ spec:
         app: {{ template "helm-guestbook.name" . }}
         release: {{ .Release.Name }}
     spec:
+      initContainers:
+        - name: wait
+          image: busybox:1.28.2
+          command: [ 'sh', '-c', 'sleep 30' ]
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
