--- a/helm-guestbook2/templates/deployment2.yaml
+++ b/helm-guestbook2/templates/deployment2.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "helm-guestbook.fullname" . }}-2
+  name: {{ template "helm-guestbook.fullname" . }}-b
   labels:
-    app: {{ template "helm-guestbook.name" . }}-2
+    app: {{ template "helm-guestbook.name" . }}-b
     chart: {{ template "helm-guestbook.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -12,12 +12,12 @@ spec:
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: {{ template "helm-guestbook.name" . }}-2
+      app: {{ template "helm-guestbook.name" . }}-b
       release: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ template "helm-guestbook.name" . }}-2
+        app: {{ template "helm-guestbook.name" . }}-b
         release: {{ .Release.Name }}
     spec:
       containers:
