--- a/coremedia-demo/templates/cms.yaml
+++ b/coremedia-demo/templates/cms.yaml
@@ -28,7 +28,7 @@ spec:
           command: [ 'sh', '-c', 'sleep 30' ]
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:0.2"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
