--- a/coremedia/cae-live/templates/cae-live.yaml
+++ b/coremedia/cae-live/templates/cae-live.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: {{ .Values.wave }}
 spec:
   replicas: {{ .Values.replicaCount }}
   revisionHistoryLimit: 3
