--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: gcr.io/heptio-images/ks-guestbook-demo
-  tag: 0.2
+  repository: nginx
+  tag: 1.20-alpine
   pullPolicy: IfNotPresent
 
 service:
