--- a/app2/templates/helm-guestbook.yaml
+++ b/app2/templates/helm-guestbook.yaml
@@ -5,7 +5,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   annotations:
-    argocd-image-updater.argoproj.io/image-list: "gcr.io/heptio-images/ks-guestbook-demo"
+    argocd-image-updater.argoproj.io/image-list: "nginx"
 spec:
   destination:
     namespace: helm-guestbook
