--- a/coremedia/studio-server/templates/studio-server.yaml
+++ b/coremedia/studio-server/templates/studio-server.yaml
@@ -23,8 +23,9 @@ spec:
         release: {{ .Release.Name }}
     spec:
       containers:
+        {{- $servicevalues := get .Values .Release.Name }}
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ $servicevalues.imagetag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
