--- a/coremedia/studio-server/templates/studio-server.yaml
+++ b/coremedia/studio-server/templates/studio-server.yaml
@@ -23,9 +23,8 @@ spec:
         release: {{ .Release.Name }}
     spec:
       containers:
-        {{- $servicevalues := get .Values .Release.Name }}
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ $servicevalues.imagetag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
