--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -23,10 +23,29 @@ spec:
       valueFiles:
         - $common/cm-app-versions/global.yaml
         - $common/cm-app-versions/dev-versions.yaml
-  - path: coremedia/studio-server
-    repoURL: https://github.com/matlion/argocd-example-apps.git
-    targetRevision: HEAD
-    helm:
-      valueFiles:
-        - $common/cm-app-versions/global.yaml
-        - $common/cm-app-versions/dev-versions.yaml
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: studio-server
+  namespace: default
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: "gcr.io/heptio-images/ks-guestbook-demo"
+spec:
+  destination:
+    namespace: cmcc
+    server: https://kubernetes.default.svc
+  project: default
+  sources:
+    - repoURL: https://github.com/matlion/argocd-example-apps.git
+      targetRevision: HEAD
+      ref: common
+    - path: coremedia/studio-server
+      repoURL: https://github.com/matlion/argocd-example-apps.git
+      targetRevision: HEAD
+      helm:
+        valueFiles:
+          - $common/cm-app-versions/global.yaml
+          - $common/cm-app-versions/dev-versions.yaml
