--- a/coremedia/common/global.yaml
+++ b/coremedia/common/global.yaml
@@ -1,4 +1,4 @@
 image:
-  repository: gcr.io/heptio-images/ks-guestbook-demo
-  tag: 0.2
+  repository: nginx
+  tag: 1.25
   pullPolicy: IfNotPresent
