--- a/coremedia/cae-live/templates/cae-live.yaml
+++ b/coremedia/cae-live/templates/cae-live.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: {{ template "helm-guestbook.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    type: cae-live
   annotations:
     argocd.argoproj.io/sync-wave: "{{ .Values.wave }}"
 spec:
