--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -7,6 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   sources:
@@ -30,6 +31,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   sources:
@@ -56,6 +58,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
@@ -89,6 +92,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
