--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -2,12 +2,12 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: content-management-server
-  namespace: default
+  namespace: cmcc
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: cmcc
     server: https://kubernetes.default.svc
   project: default
   sources:
@@ -31,7 +31,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: cmcc
     server: https://kubernetes.default.svc
   project: default
   sources:
@@ -58,7 +58,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: cmcc
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
@@ -92,7 +92,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: cmcc
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
