removed namespace cmcc

--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     namespace: cmcc
     server: https://kubernetes.default.svc
-  project: default
+  project: cmcc
   sources:
   - repoURL: https://github.com/matlion/argocd-example-apps.git
     targetRevision: HEAD
@@ -31,7 +31,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cmcc
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   sources:
