--- a/coremedia/app-of-apps.yaml
+++ b/coremedia/app-of-apps.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: coremedia
   namespace: default
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
