--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -2,14 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: content-management-server
-  namespace: cmcc
+  namespace: defaul
   annotations:
     argocd.argoproj.io/sync-wave: "0"
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cmcc
+    namespace: defaul
     server: https://kubernetes.default.svc
   project: cmcc
   sources:
@@ -28,14 +28,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: studio-server
-  namespace: cmcc
+  namespace: defaul
   annotations:
     argocd.argoproj.io/sync-wave: "0"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cmcc
+    namespace: defaul
     server: https://kubernetes.default.svc
   project: default
   sources:
@@ -55,7 +55,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cae-live-1
-  namespace: cmcc
+  namespace: defaul
   annotations:
     argocd.argoproj.io/sync-wave: "1"
   labels:
@@ -64,7 +64,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cmcc
+    namespace: defaul
     server: https://kubernetes.default.svc
   project: default
   sources:
@@ -87,7 +87,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cae-live-2
-  namespace: cmcc
+  namespace: defaul
   annotations:
     argocd.argoproj.io/sync-wave: "2"
   labels:
@@ -96,7 +96,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cmcc
+    namespace: defaul
     server: https://kubernetes.default.svc
   project: default
   sources:
