--- a/coremedia/app-of-apps.yaml
+++ b/coremedia/app-of-apps.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: coremedia
-  namespace: cmcc
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
   finalizers:
