--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -9,7 +9,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: defaul
+    namespace: default
     server: https://kubernetes.default.svc
   project: cmcc
   sources:
@@ -28,7 +28,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: studio-server
-  namespace: defaul
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "0"
   finalizers:
