--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -35,7 +35,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: defaul
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   sources:
@@ -55,7 +55,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cae-live-1
-  namespace: defaul
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "1"
   labels:
