--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -11,7 +11,7 @@ spec:
   destination:
     namespace: default
     server: https://kubernetes.default.svc
-  project: cmcc
+  project: default
   sources:
   - repoURL: https://github.com/matlion/argocd-example-apps.git
     targetRevision: HEAD
