--- a/coremedia/app-of-apps.yaml
+++ b/coremedia/app-of-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: coremedia
+  name: root
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
