--- a/cm-app/templates/app-coremedia-demo.yaml
+++ b/cm-app/templates/app-coremedia-demo.yaml
@@ -15,6 +15,8 @@ spec:
     server: https://kubernetes.default.svc
   project: cmcc
   syncPolicy:
+    syncOptions:
+      - Replace=true
     automated:
       prune: true
       selfHeal: true
@@ -51,6 +53,8 @@ spec:
     server: https://kubernetes.default.svc
   project: cmcc
   syncPolicy:
+    syncOptions:
+      - Replace=true
     automated:
       prune: true
       selfHeal: true
